Fix mobile footer overflow

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -63,7 +63,7 @@
 .wave {
   background-image: url(/images/desert/footer-wave.svg);
   background-repeat: repeat-x;
-  width: 200%;
+  width: 100%;
   height: 100px;
   position: absolute;
   top: -24px;
